# rlShaders

./: .gitignore  404.html  CMakeLists.txt  LICENSE  README.md  _config.yml  hugo.toml  index.html  index.md  index.xml  launch.bat  page.html  rlShaders.sln  sitemap.xml  tags.html
.github/workflows/: gh-pages.yml
_includes/: comments.html  footer.html  google_analytics.html  head.html  nav.html
_layouts/: default.html  page.html  post.html  tag_index.html
_pages/: install.md  references.md
_plugins/: jekyll-pages-directory.rb  tag_gen.rb
content/: _index.md
content/page/: install.md  references.md
css/: bootstrap.css  clean-blog.css  clean-blog.min.css  foundation.css  header-anchor.css  lightbox.css  monokai.css  prettyprint.css
msvc/: MtoA.props  rlShaders.vcxproj  rlShaders.vcxproj.filters
page/: 1.html  index.xml  install.html  references.html
page/page/: 1.html
pages/: install.html  references.html
scripts/: CMakeLists.txt
scripts/ae/: rlDisneyTemplate.py  rlGgxTemplate.py  rlSkinTemplate.py
src/: CMakeLists.txt  _PluginMain.cpp  rlDisney.cpp  rlGgx.cpp  rlGgx.h  rlShaders.mtd  rlSkin.cpp  rlSss.cpp  rlSss.h  rlSssND.cpp  rlUtil.cpp  rlUtil.h
src/ext/: tinyexr.cc
static/css/: clean-blog.css  twentytwenty.css
static/js/: jquery.twentytwenty.js  lightbox.js
tags/: index.xml
testsuite/: runtest.py
testsuite/data/: test_geo.ass
testsuite/mtoa/0001/: README
testsuite/mtoa/0001/data/: ggx_teflon.ass
testsuite/mtoa/0001/ref/: ref.exr
testsuite/mtoa/0002/: README
testsuite/mtoa/0002/data/: ggx_gold.ass
testsuite/mtoa/0002/ref/: ref.exr
testsuite/mtoa/0003/: README
testsuite/mtoa/0003/data/: ggx_anisotropic.ass
testsuite/mtoa/0003/ref/: ref.exr
testsuite/mtoa/0004/: README
testsuite/mtoa/0004/data/: disney.ass
testsuite/mtoa/0004/ref/: ref.exr
testsuite/mtoa/0005/: README
testsuite/mtoa/0005/data/: disney_subsurface.ass
testsuite/mtoa/0005/ref/: ref.exr
testsuite/mtoa/0006/: README
testsuite/mtoa/0006/data/: disney_metallic.ass
testsuite/mtoa/0006/ref/: ref.exr
testsuite/mtoa/0007/: README
testsuite/mtoa/0007/data/: disney_specular.ass
testsuite/mtoa/0007/ref/: ref.exr
testsuite/mtoa/0008/: README
testsuite/mtoa/0008/data/: disney_anisotropic.ass
testsuite/mtoa/0008/ref/: ref.exr
testsuite/mtoa/0009/: README
testsuite/mtoa/0009/data/: skin_probe_sampling.ass
testsuite/mtoa/0009/ref/: ref.exr
testsuite/mtoa/0010/: README
testsuite/mtoa/0010/data/: skin_diffusion.ass  skin_diffusion.ma
testsuite/mtoa/0010/ref/: ref.exr
themes/bootstrap/: README.md  theme.toml
themes/bootstrap/archetypes/: post.md
themes/bootstrap/layouts/: 404.html  index.html
themes/bootstrap/layouts/_default/: list.html
themes/bootstrap/layouts/about/: single.html
(+13 files in other folders)
